2008-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{msl.c, svg.c, url.c}: Fix compilation with modern
	libxml2 under MinGW.

2008-05-08  Josue Andrade Gomes  <josuegomes@gmail.com>

	* magick/nt_base.h, libxml/include/win32config.h (vsnprintf):
	Fixed compilation issue noticed with Visual C++ 2008.

2008-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.1 released.
	* BENCHMARKS.txt: Added a section for execution overhead
	measurements.

2008-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (GetMagickInfo): Simplify implementation.
	(RegisterMagickInfo): Remove any existing entry since module
	loading may result in duplicate entries.

2008-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update to libtool 1.2.4.
	* GraphicsMagick.spec.in: Add --with-included-ltdl to the default
	options since this seems safest until the libltdl validation logic
	is fully robust.
	* magick/Makefile.am (magick_libGraphicsMagick_la_LIBADD): Apply
	libltdl dependency argument as required for building.
	* configure.ac: Intuit if the GraphicsMagick library will depend
	on -lltdl.
	* Magick++/bin/GraphicsMagick++-config.in: Use substitutions
	rather than invoking GraphicsMagick-config in order to determine
	GraphicsMagick library usage requirements.  This avoids problems
	when GraphicsMagick-config is not in the executable search path.

2008-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (OpenModule): Ignore requests to open modules
	which have already been opened.
	* GraphicsMagick.spec.in: NEWS was renamed to NEWS.txt.  Enable
	libtool verbose output so it is possible to diagnose build
	failures.

2008-05-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (RegisterSVGImage): Fix spelling of "Graphics" in
	registered description.

2008-05-01  Fojtik Jaroslav  <JaFojtik@seznam.cz>
