@@ -24,6 +24,7 @@
 2008-05-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> configure.ac, magick/nt_base.h: Fix using libbz2 under MinGW.
   <LI> coders/{msl.c, svg.c, url.c}: Fix compilation with modern
         libxml2 under MinGW.
 
